--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                     <option value="es">Español</option>
                 </select>
             </div>
+            <div class="nav-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
 
