Adjust collection.html

--- a/collection.html
+++ b/collection.html
@@ -61,56 +61,56 @@
         <section class="collection-grid">
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/Ceramic bowl.jpg" alt="Product" class="product-image">
+                <img src="Images/Ceramic bowl.jpg" alt="Product" class="product-image">
                 <div class="item-details">
                     <p>Handcrafted Ceramic Bowl</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/wallhanging.webp" alt="Product" class="product-image">
+                <img src="Images/wallhanging.webp" alt="Product" class="product-image">
                 <div class="item-details">
                     <p>Hand-woven Wall Hanging</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/wovenbasket.webp" alt="Product" class="product-image">
+                <img src="Images/wovenbasket.webp" alt="Product" class="product-image">
                 <div class="item-details">
                     <p>Woven Storage Basket</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/beated necklace.jpg" alt="Product" class="product-image">
+                <img src="Images/beated necklace.jpg" alt="Product" class="product-image">
                 <div class="item-details">
                     <p>Handmade Beaded Necklace</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/ceramicvase.jpg" alt="Product" class="product-image">
+                <img src="Images/ceramicvase.jpg" alt="Product" class="product-image">
                 <div class="item-details">
                     <p>Ceramic Vase Set</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/DIY-Tablecloth-Runner-on-table-in-outdoor-kitchen-2.jpg" alt="Product" class="product-image">
+                <img src="Images/DIY-Tablecgit push origin mainloth-Runner-on-table-in-outdoor-kitchen-2.jpg" alt="Product" class="product-image">
                 <div class="item-details">
                     <p>Hand-dyed Table Runner</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/Wall-Basket-with-faux-flowers-and-blue-and-white-plate-wall.jpg" alt="Product" class="product-image">
+                <img src="Images/Wall-Basket-with-faux-flowers-and-blue-and-white-plate-wall.jpg" alt="Product" class="product-image">
                 <div class="item-details">
                     <p>Decorative Wall Basket</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/telanaari-handmade-earrings-fabric-fantasia-black-default-title-39831475028124_1800x1800.webp" alt="Product" class="product-image">
+                <img src="Images/telanaari-handmade-earrings-fabric-fantasia-black-default-title-39831475028124_1800x1800.webp" alt="Product" class="product-image">
                 <div class="item-details">
                     <p>Artisanal Earrings</p>
                 </div>
