--- a/collection.html
+++ b/collection.html
@@ -96,7 +96,7 @@
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="./Images/DIY-Tablecgit push origin mainloth-Runner-on-table-in-outdoor-kitchen-2.jpg" alt="Product" class="product-image">
+                <img src="Images/DIY-Tablecloth-Runner-on-table-in-outdoor-kitchen-2.jpg" alt="Product" class="product-image">
                 <div class="item-details">
                     <p>Hand-dyed Table Runner</p>
                 </div>
