--- a/collection-es.html
+++ b/collection-es.html
@@ -38,6 +38,11 @@
                     <option value="es" selected>Español</option>
                 </select>
             </div>
+            <div class="nav-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
 
