--- a/about.html
+++ b/about.html
@@ -38,6 +38,11 @@
                     <option value="es">Español</option>
                 </select>
             </div>
+            <div class="nav-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
         <!-- MAIN CONTENT -->
