--- a/index-es.html
+++ b/index-es.html
@@ -39,6 +39,11 @@
                     <option value="es" selected>Español</option>
                 </select>
             </div>
+            <div class="nav-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
 
@@ -162,23 +167,5 @@
     </footer>
 
     <script src="script.js"></script>
-    <script>
-        // Navegación toggle
-        document.querySelector('.nav-toggle').addEventListener('click', function() {
-            this.classList.toggle('active');
-            document.querySelector('.main-nav').classList.toggle('active');
-        });
-
-        // Cerrar menú al hacer clic fuera
-        document.addEventListener('click', function(event) {
-            const isClickInsideNav = document.querySelector('.main-nav').contains(event.target);
-            const isClickOnToggle = document.querySelector('.nav-toggle').contains(event.target);
-            
-            if (!isClickInsideNav && !isClickOnToggle && document.querySelector('.main-nav').classList.contains('active')) {
-                document.querySelector('.nav-toggle').classList.remove('active');
-                document.querySelector('.main-nav').classList.remove('active');
-            }
-        });
-    </script>
 </body>
 </html>
