--- a/collection-es.html
+++ b/collection-es.html
@@ -65,56 +65,56 @@
         <section class="collection-grid">
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/Ceramic bowl.jpg" alt="Producto" class="product-image">
+                <img src="Images/Ceramic bowl.jpg" alt="Producto" class="product-image">
                 <div class="item-details">
                     <p>Cuenco Cerámico Hecho a Mano</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/wallhanging.webp" alt="Producto" class="product-image">
+                <img src="Images/wallhanging.webp" alt="Producto" class="product-image">
                 <div class="item-details">
                     <p>Tapiz de Pared Tejido a Mano</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/wovenbasket.webp" alt="Producto" class="product-image">
+                <img src="Images/wovenbasket.webp" alt="Producto" class="product-image">
                 <div class="item-details">
                     <p>Cesta de Almacenaje Tejida</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/beated necklace.jpg" alt="Producto" class="product-image">
+                <img src="Images/beated necklace.jpg" alt="Producto" class="product-image">
                 <div class="item-details">
                     <p>Collar de Cuentas Artesanal</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/ceramicvase.jpg" alt="Producto" class="product-image">
+                <img src="Images/ceramicvase.jpg" alt="Producto" class="product-image">
                 <div class="item-details">
                     <p>Set de Jarrones Cerámicos</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/DIY-Tablecloth-Runner-on-table-in-outdoor-kitchen-2.jpg" alt="Producto" class="product-image">
+                <img src="Images/DIY-Tablecloth-Runner-on-table-in-outdoor-kitchen-2.jpg" alt="Producto" class="product-image">
                 <div class="item-details">
                     <p>Caminero de Mesa Teñido a Mano</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/Wall-Basket-with-faux-flowers-and-blue-and-white-plate-wall.jpg" alt="Producto" class="product-image">
+                <img src="Images/Wall-Basket-with-faux-flowers-and-blue-and-white-plate-wall.jpg" alt="Producto" class="product-image">
                 <div class="item-details">
                     <p>Cesta Decorativa de Pared</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="item-image"></div>
-                <img src="/Images/telanaari-handmade-earrings-fabric-fantasia-black-default-title-39831475028124_1800x1800.webp" alt="Producto" class="product-image">
+                <img src="Images/telanaari-handmade-earrings-fabric-fantasia-black-default-title-39831475028124_1800x1800.webp" alt="Producto" class="product-image">
                 <div class="item-details">
                     <p>Pendientes Artesanales</p>
                 </div>
