--- a/about.html
+++ b/about.html
@@ -127,11 +127,11 @@
                     </div>
                     <div class="slide fade">
                         <img src="./Images/waaier.jpg" alt="Fan out of chambira">
-                        <div class="slide-caption">Hand fan made out of chambira fiber</div>
+                        <div class="slide-caption">Hand fan made with huambe fiber</div>
                     </div>
                     <div class="slide fade">
                         <img src="./Images/slippers.jpg" alt="Slippers out of Chambira">
-                        <div class="slide-caption">Flipflops made out of chambira fiber</div>
+                        <div class="slide-caption">Flipflops made with chambira, seeds, and rubber (resin from the shiringa tree).</div>
                     </div>
                     
                     <!-- Navigation arrows -->
