--- a/about-es.html
+++ b/about-es.html
@@ -59,6 +59,8 @@
             <li>Amazonas</li>
             <li>Manacamiri</li>
             <li>Comunidad Bora en Pebas Pucarquillo</li>
+            <li>Centro Fuerte</li>
+            <li>Santo Tomas</li>
             <br>
             <p>Junto con estos artesanos, ofrecemos una variedad de productos elaborados con materiales locales como la chambira y el huambe, asegurando que nuestros productos reflejen el alma de la Amazonía y ayuden a mantener viva nuestra herencia cultural.</p>
         </div>
