--- a/about.html
+++ b/about.html
@@ -75,6 +75,8 @@
                     <li>Amazonas</li>
                     <li>Manacamiri</li>
                     <li>Bora Community at Pebas Pucarquillo</li>
+                    <li>Centro Fuerte</li>
+                    <li>Santo Tomas</li>
                     <br></br>
                     <p>Together with these craftmen, we offer a variety of products produced from local materials. We use materials like: chambira, huambe to make sure that our products reflect the soul of the Amazone Forest and help keeping our cultural heritage alive.</p>
                 </div>
