--- a/collection.html
+++ b/collection.html
@@ -143,10 +143,10 @@
             }
         });
 
-        // Google Sheets Integration - REPLACE API_KEY with your actual key
+        // Google Sheets Integration
         const SHEET_ID = '1sr8KmlhHWJGA5Jq747ORQdy888wD3YPrHKrbjRRNgkM'; // Sheet ID
         const API_KEY = 'AIzaSyAjRUZbE-kmkSTmAkA7Adq4GPJeinkEZIE';   //API Key
-        const SHEET_RANGE = 'Blad1!A2:F'; // Range
+        const SHEET_RANGE = 'English!A2:F'; // Range
         
         // Global variables to store data
         let collectionItems = [];
