--- a/events.html
+++ b/events.html
@@ -51,11 +51,14 @@
       <input type="text" id="search-box" placeholder="Search events..." class="search-box">
     </div>
 
-    <div class="events-grid" id="events-grid"></div>
+    <div class="events-grid" id="events-grid">
+  
+    </div>
 
     <div id="loading-indicator" class="loading-indicator">Loading events...</div>
     <div id="error-message" class="error-message">Failed to load events. Please try again.</div>
   </main>
+  
 
   <script>
     const SHEET_ID = '1F4Ei3R4v4vrkNjczs0CodsSp6xp9pgkOpw_d5q0b6nA';
@@ -111,10 +114,11 @@
         const card = document.createElement('div');
         card.className = 'event-card';
         card.innerHTML = `
-          <img src="${imgSrc}" alt="${title}">
           <div class="event-content">
             <div class="event-title">${title || 'Untitled Event'}</div>
             <div class="event-date">${date || 'Date not set'}</div>
+              <div class="day">
+              <div class="month" >
             <div class="event-location">${location || 'Location TBD'}</div>
             <div class="event-description">${description || ''}</div>
           </div>
