--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                 <div class="container">
                     <blockquote>
                         <p><b>"To change the world, you only need to take the first step!"</b></p>
-                        <cite><b>— Olga Vidurrizaga, Founder</b></cite>
+                        <cite><b>— Olga Vidurizzaga, Founder</b></cite>
                     </blockquote>
                     <p>We aim to make sure that our raw materials are protected, ensuring longevity & sustainability in each community that we work with.</p>
                 </div>
