language of event

--- a/events.html
+++ b/events.html
@@ -59,7 +59,7 @@
     <div id="error-message" class="error-message">Failed to load events. Please try again.</div>
   </main>
   
-
+  <script src="script.js"></script>
   <script>
     const SHEET_ID = '1F4Ei3R4v4vrkNjczs0CodsSp6xp9pgkOpw_d5q0b6nA';
     const API_KEY = 'AIzaSyCH4dn81XRgUP7KjkTUyANicwUr0bvgiSM';
