--- a/about-es.html
+++ b/about-es.html
@@ -21,7 +21,7 @@
                     <a href="about-es.html" class="active">Sobre Nosotros</a>
                     <div class="dropdown-content">
                         <a href="our-story-es.html" class="active">Nuestra Historia</a>
-                        <a href="join-us-es.html">Únete</a>
+                        <a href="Crafted-with-devotion-es.html">Elaborado con devoción</a>
                     </div>
                 </li>
                 <li><a href="collection-es.html">Colección</a></li>
