--- a/collection-es.html
+++ b/collection-es.html
@@ -23,7 +23,7 @@
                         <a href="about-es.html">Sobre Nosotros</a>
                         <div class="dropdown-content">
                             <a href="our-story-es.html">Nuestra Historia</a>
-                            <a href="join-us-es.html">Súmate</a>
+                            <a href="Crafted-with-devotion-es.html">Elaborado con devoción</a>
                         </div>
                     </li>
                     <li><a href="collection-es.html" class="active">Colección</a></li>
