--- a/contact-es.html
+++ b/contact-es.html
@@ -22,7 +22,7 @@
                         <a href="about-es.html">Sobre Nosotros</a>
                         <div class="dropdown-content">
                             <a href="our-story-es.html">Nuestra Historia</a>
-                            <a href="join-us-es.html">Únete</a>
+                            <a href="Crafted-with-devotion-es.html">Elaborado con devoción</a>
                         </div>
                     </li>
                     <li><a href="collection-es.html">Colección</a></li>
