--- a/our-story.html
+++ b/our-story.html
@@ -22,7 +22,7 @@
                         <a href="about.html" class="active">About</a>
                         <div class="dropdown-content">
                             <a href="our-story.html" class="active">Our Story</a>
-                            <a href="join-us.html">Join Us</a>
+                            <a href="Crafted-with-devotion.html">Crafted with devotion</a>
                         </div>
                     </li>
                     <li><a href="collection.html">Collection</a></li>
