--- a/contact.html
+++ b/contact.html
@@ -211,11 +211,12 @@
         message: this.message.value
     };
 
-    const response = await fetch('https://your-netlify-site.netlify.app/.netlify/functions/send-email', {
+    const response = await fetch('https://verdant-paletas-6d848d.netlify.app/.netlify/functions/send-email', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(formData)
     });
+    
 
     const result = await response.json();
     document.getElementById('form-message').innerText = result.message;
