--- a/Crafted-with-devotion.html
+++ b/Crafted-with-devotion.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!--Leaflet Styles !-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
+<style>
+    #map {
+      width: 100%;
+      height: 600px;
+      margin: 2rem 0;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    .leaflet-tooltip {
+      background-color: rgba(0, 0, 0, 0.75);
+      color: #fff;
+      padding: 6px 10px;
+      border-radius: 4px;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
     <header>
@@ -45,7 +64,12 @@
             </div>
         </div>
     </header>
-
+    <main>
+    <!-- Map Section -->
+    <section class="map-section">
+      <div id="map"></div>
+    </section>
+  </main>
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
@@ -83,5 +107,39 @@
             <p>&copy; 2025 Shaju. All Rights Reserved.</p>
         </div>
     </footer>
+    <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script>
+    const map = L.map('map').setView([-4.5, -73.5], 7);
+
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+    fetch('data/regions.geojson')
+      .then(res => res.json())
+      .then(regions => {
+        L.geoJSON(regions, {
+          style: {
+            color: "#3388ff",
+            weight: 2,
+            fillColor: "#3388ff",
+            fillOpacity: 0.4
+          },
+        onEachFeature: function(feature, layer) {
+            layer.bindTooltip(
+              `<strong>${feature.properties.name}</strong><br>${feature.properties.info}`,
+              { sticky: true }
+            );
+
+            layer.on("mouseover", function() {
+              this.setStyle({ fillOpacity: 0.7 });
+            });
+        layer.on("mouseout", function() {
+              this.setStyle({ fillOpacity: 0.4 });
+            });
+          }
+        }).addTo(map);
+      });
+  </script>  
 </body>
 </html>
