--- a/collection.html
+++ b/collection.html
@@ -117,6 +117,14 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
+            <div class="footer-links">
+                <h3>Information</h3>
+                <ul>
+                    <li><a href="terms-of-service.html">Terms of Service</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    <li><a href="legal-notice.html">Legal Notice</a></li>
+                </ul>
+            </div>
             <div class="footer-newsletter">
                 <h3>Stay Updated</h3>
                 <p>Subscribe to our newsletter for the latest updates and exclusive offers.</p>
@@ -127,7 +135,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Shaju. All Rights Reserved.</p>
+            <p>&copy; <span id="current-year"></span> Shaju. All Rights Reserved.</p>
         </div>
     </footer>
     
