--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,6 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Shaju Logo" class="footer-logo-image">
-                <p>Brought to you with the passion to make an impact</p>
                 <div class="social-icons">
                     <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
                         <i class="fab fa-instagram"></i>
@@ -185,6 +184,14 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
+            <div class="footer-links">
+                <h3>Information</h3>
+                <ul>
+                    <li><a href="terms-of-service.html">Terms of Service</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    <li><a href="legal-notice.html">Legal Notice</a></li>
+                </ul>
+            </div>
             <div class="footer-newsletter">
                 <h3>Stay Updated</h3>
                 <p>Subscribe to our newsletter for the latest updates and exclusive offers.</p>
@@ -195,7 +202,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Shaju. All Rights Reserved.</p>
+            <p>&copy; <span id="current-year"></span> Shaju. All Rights Reserved.</p>
         </div>
     </footer>
 
