--- a/about-es.html
+++ b/about-es.html
@@ -207,7 +207,7 @@
         slides[slideIndex-1].style.display = "block";
         dots[slideIndex-1].className += " active";
     }
-
+//dit is een comment
     // Auto-advance slides every 5 seconds
     setInterval(function() {
         changeSlide(1);
