--- a/contact.html
+++ b/contact.html
@@ -205,6 +205,7 @@
             <p>&copy; <span id="current-year"></span> Shaju. All Rights Reserved.</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 <script>
 document.getElementById('contactForm').addEventListener('submit', async function (e) {
     e.preventDefault();
