--- a/Crafted-with-devotion.html
+++ b/Crafted-with-devotion.html
@@ -14,7 +14,7 @@
     #map {
       width: 100%;
       height: 600px;
-      margin: 2rem 0;
+      margin: 1rem 0;
       border-radius: 12px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
@@ -133,6 +133,15 @@
                     <li><a href="collection.html">Collection</a></li>
                     <li><a href="events.html">Events</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+             <div class="footer-links">
+                <h3>Information</h3>
+                <ul>
+                    <li><a href="terms-of-service.html">Terms of Service</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    <li><a href="legal-notice.html">Legal Notice</a></li>
+                    <li><a href="store-locator.html"> Store Locator</a></li>
                 </ul>
             </div>
             <div class="footer-newsletter">
