--- a/contact.html
+++ b/contact.html
@@ -190,6 +190,7 @@
                     <li><a href="terms-of-service.html">Terms of Service</a></li>
                     <li><a href="privacy-policy.html">Privacy Policy</a></li>
                     <li><a href="legal-notice.html">Legal Notice</a></li>
+                    <li><a href="store-locator.html"> Store Locator</a></li>
                 </ul>
             </div>
             <div class="footer-newsletter">
