--- a/index-es.html
+++ b/index-es.html
@@ -152,6 +152,15 @@
                     <li><a href="contact.html">Contacto</a></li>
                 </ul>
             </div>
+            <div class="footer-links">
+                <h3>Information</h3>
+                <ul>
+                    <li><a href="terms-of-service.html"> Términos de servicio</a></li>
+                    <li><a href="privacy-policy.html"> Política de privacidad</a></li>
+                    <li><a href="legal-notice.html"> Aviso legal</a></li>
+                    <li><a href="store-locator.html"> Localizador de tiendas</a></li>
+                </ul>
+            </div>
             <div class="footer-newsletter">
                 <h3>Mantente Actualizado</h3>
                 <p>Suscríbete a nuestro boletín para recibir las últimas noticias y ofertas exclusivas.</p>
