--- a/index-es.html
+++ b/index-es.html
@@ -80,6 +80,10 @@
                 </div>
             </div>
         </section>
+        </div>
+            <div style="text-align:center; margin-top: 40px;">
+            <button class="btn-secondary" style="padding: 12px 40px; min-width: 220px;font-size: 24px">Visit our selling points</button>
+        </div>
 
         <section class="about-preview">
             <div class="about-text">
