--- a/Crafted-with-devotion.html
+++ b/Crafted-with-devotion.html
@@ -108,7 +108,7 @@
     </div>
     <!-- Map Section -->
     <section class="map-section">
-      <div id="map"></div>
+      <div id="leaflet-map"></div>
     </section>
   </main>
     <footer>
@@ -160,7 +160,7 @@
     <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([-4.5, -73.5], 7);
+    const map = L.map('leaflet-map').setView([-4.5, -73.5], 7);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap contributors'
