--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 
             </div>
             <div style="text-align:center; margin-top: 40px;">
-            <button class="btn-secondary" style="padding: 12px 40px; min-width: 220px;">Visit our selling points
-            </button>
+            <button class="btn-secondary" style="padding: 12px 40px; min-width: 220px;font-size: 24px">Visit our selling points</button>
             </div>
 
 
