--- a/Crafted-with-devotion.html
+++ b/Crafted-with-devotion.html
@@ -159,37 +159,39 @@
     </footer>
     <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script>
-    const map = L.map('leaflet-map').setView([-4.5, -73.5], 7);
+<script>
+  const map = L.map('leaflet-map').setView([-4.5, -73.5], 7);
 
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
-    fetch('data/regions.geojson')
-      .then(res => res.json())
-      .then(regions => {
-        L.geoJSON(regions, {
-          style: {
-            color: "#3388ff",
-            weight: 2,
-            fillColor: "#3388ff",
-            fillOpacity: 0.4
-          },
-        onEachFeature: function(feature, layer) {
-            layer.bindTooltip(
-              `<strong>${feature.properties.name}</strong><br>${feature.properties.info}`,
-              { sticky: true }
-            );
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: '&copy; OpenStreetMap contributors'
+  }).addTo(map);
 
-            layer.on("mouseover", function() {
-              this.setStyle({ fillOpacity: 0.7 });
-            });
-        layer.on("mouseout", function() {
-              this.setStyle({ fillOpacity: 0.4 });
-            });
-          }
-        }).addTo(map);
-      });
-  </script>  
-</body>
-</html>
+  fetch('data/regions.geojson')
+    .then(res => res.json())
+    .then(regions => {
+      L.geoJSON(regions, {
+        style: {
+          color: "#3388ff",
+          weight: 2,
+          fillColor: "#3388ff",
+          fillOpacity: 0.4
+        },
+        onEachFeature: function (feature, layer) {
+          layer.bindPopup(
+            `<div class="custom-tooltip">
+              <strong>${feature.properties.name}</strong>
+              <p>${feature.properties.info}</p>
+            </div>`,
+          );
+
+          layer.on("mouseover", function () {
+            this.setStyle({ fillOpacity: 0.7 });
+          });
+
+          layer.on("mouseout", function () {
+            this.setStyle({ fillOpacity: 0.4 });
+          });
+        }
+      }).addTo(map);
+    });
+</script>
