--- a/Crafted-with-devotion-es.html
+++ b/Crafted-with-devotion-es.html
@@ -70,7 +70,7 @@
                 </ul>
             </div>
             <div class="footer-links">
-                <h3>Information</h3>
+                <h3>Informacíon</h3>
                 <ul>
                     <li><a href="terms-of-service.html"> Términos de servicio</a></li>
                     <li><a href="privacy-policy.html"> Política de privacidad</a></li>
