--- a/store-locator-es.html
+++ b/store-locator-es.html
@@ -46,41 +46,50 @@
         </div>
     </header>
     <footer>
-        <div class="footer-content">
-            <div class="footer-logo">
-                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Logo Shaju" class="footer-logo-image">
-                <p>Hecho con pasión para generar un impacto</p>
-                <div class="social-icons">
-                    <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="https://facebook.com/shaju.artesania" target="_blank" class="social-icon">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                </div>
+    <div class="footer-content">
+        <div class="footer-logo">
+            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Logo Shaju" class="footer-logo-image">
+            <p>Hecho con pasión para generar impacto</p>
+            <div class="social-icons">
+                <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://facebook.com/shaju.artesania" target="_blank" class="social-icon">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
             </div>
-            <div class="footer-links">
-                <h3>Enlaces Rápidos</h3>
+        </div>
+        <div class="footer-links">
+            <h3>Enlaces Rápidos</h3>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="about.html">Sobre Nosotros</a></li>
+                <li><a href="collection.html">Colección</a></li>
+                <li><a href="events.html">Eventos</a></li>
+                <li><a href="contact.html">Contacto</a></li>
+            </ul>
+        </div>
+        <div class="footer-links">
+                <h3>Informacíon</h3>
                 <ul>
-                    <li><a href="index-es.html">Inicio</a></li>
-                    <li><a href="about-es.html">Sobre Nosotros</a></li>
-                    <li><a href="collection-es.html">Colección</a></li>
-                    <li><a href="events-es.html">Eventos</a></li>
-                    <li><a href="contact-es.html">Contacto</a></li>
+                    <li><a href="terms-of-service.html"> Términos de servicio</a></li>
+                    <li><a href="privacy-policy.html"> Política de privacidad</a></li>
+                    <li><a href="legal-notice.html"> Aviso legal</a></li>
+                    <li><a href="store-locator.html"> Localizador de tiendas</a></li>
                 </ul>
             </div>
-            <div class="footer-newsletter">
-                <h3>Mantente Actualizado</h3>
-                <p>Suscríbete a nuestro boletín para recibir las últimas novedades y ofertas exclusivas.</p>
-                <form>
-                    <input type="email" placeholder="Tu correo electrónico">
-                    <button type="submit">Suscribirse</button>
-                </form>
-            </div>
+        <div class="footer-newsletter">
+            <h3>Mantente Actualizado</h3>
+            <p>Suscríbete a nuestro boletín para recibir las últimas noticias y ofertas exclusivas.</p>
+            <form>
+                <input type="email" placeholder="Tu Correo Electrónico">
+                <button type="submit">Suscribirse</button>
+            </form>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 Shaju. Todos los derechos reservados.</p>
-        </div>
-    </footer>
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 2025 Shaju. Todos los Derechos Reservados.</p>
+    </div>
+</footer>
 </body>
 </html>
