--- a/Crafted-with-devotion.html
+++ b/Crafted-with-devotion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crafted with devotion - Shaju</title>
+    <title>Crafted with devotion - Shajú</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -72,7 +72,7 @@
                 <!-- flex box-->
                 <div class="ourstory">
                     <div class="about-image2">
-                        <img src="Images/OlgaChambira.jpg" class="olga-chambira">
+                        <img src="Images/OlgaChambira.jpg" class="olga-chambira" loading="Lazy">
                     </div>
                     <div class="about-ourstory">
                         <p>We work hand in hand with local communities and individuals who are rebuilding their lives after incarceration. By teaching traditional methods of gathering and processing natural resources, we not only preserve cultural heritage and promote environmental sustainability, but also provide meaningful, dignified employment to those seeking a second chance. Every piece created through Shaju carries a story of identity, resilience, and transformation.</p> 
@@ -96,11 +96,11 @@
                     <li>Centro Fuerte</li>
                     <li>Santo Tomas</li>
                     </ul>
-                    <br></br>
-                    <p>Together with these craftmen, we offer a variety of products produced from local materials. We use materials like chambira and huambe to make sure that our products reflect the soul of the Amazone Forest and help keeping our cultural heritage alive.</p>
+                    <br />
+                    <p>Together with these craftsmen, we offer a variety of products produced from local materials. We use materials like chambira and huambe to make sure that our products reflect the soul of the Amazon Forest and help keeping our cultural heritage alive.</p>
                 </div>
                 <div class="about-image2">
-                    <img src="Images/OlgaChambira.jpg" class="olga-chambira">
+                    <img src="Images/OlgaChambira.jpg" class="olga-chambira" loading="Lazy">
                 </div>
             </section>
     <div style="text-align: center">
@@ -148,7 +148,8 @@
                 <h3>Stay Updated</h3>
                 <p>Subscribe to our newsletter for the latest updates and exclusive offers.</p>
                 <form>
-                    <input type="email" placeholder="Your Email">
+                    <label for="newsletter-email" class="sr-only">Email address</label>
+                    <input type="email" id= "newsletter-email" placeholder="Your Email"/>
                     <button type="submit">Subscribe</button>
                 </form>
             </div>
